<resources>

    <string name="app_name">Reminders</string>
    <string name="app_version">v1-beta</string>
    <string name="app_license">GPLv3+ licensed.</string>
    <string name="app_copyright">Copyright (C) 2015 Edson Duarte</string>
    <string name="icon_copyright">Icon\'s Copyright (C) 2015 Filipe Marques</string>
    <string name="project_url">https://github.com/edsonduarte1990/reminders</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback/Help</string>
    <string name="action_about">About</string>


    <!-- MainActivity -->
    <string name="main_activity_label"><b>Next Meal:</b></string>
    <string name="main_activity_view">Downloading Menu!</string>
    <string name="main_activity_update_view">Not updated yet.</string>
    <string name="main_activity_chooser">Send email with:</string>
    <string name="main_activity_note">This app is Free Software.</string>

    <!-- AboutActivity -->
    <string name="about_activity_title">About</string>
    <string name="about_activity_button">Project\'s Page</string>
    <string name="about_activity_description">Application Icon</string>
    <string name="about_activity_button_action">Open Page</string>

    <!-- SettingsActivity -->
    <string name="settings_activity_label">Settings</string>

    <string name="category_general">General</string>
    <string name="category_reminders">Reminders</string>

    <string name="pref_last_update_key">pref_last_update</string>

    <string name="pref_restaurant_key">pref_restaurant</string>
    <string name="pref_restaurant_title">Select Restaurant</string>
    <string name="pref_restaurant_summary">Select from which restaurant the menu should be displayed.</string>
    <string name="pref_restaurant_default">https://www1.sistemas.unicamp.br/Mobile/CardapioPrefeituraCampinas</string>

    <string-array name="pref_restaurant_entries">
        <item>COTUCA, RU, RA, RS</item>
        <item>COTIL, FCA, FOP, FT</item>
        <!-- <item>PFL</item> -->
    </string-array>
    <string-array name="pref_restaurant_values">
        <item>https://www1.sistemas.unicamp.br/Mobile/CardapioPrefeituraCampinas</item>
        <item>https://www1.sistemas.unicamp.br/Mobile/CardapioFCA</item>
        <!-- <item>https://www1.sistemas.unicamp.br/Mobile/CardapioPFL</item> -->
    </string-array>

    <string name="pref_menu_key">pref_menu</string>
    <string name="pref_menu_title">Vegetarian Menu</string>
    <string name="pref_menu_summary_on">If available, app displays vegetarian food.</string>
    <string name="pref_menu_summary_off">Not showing vegetarian food.</string>

    <string name="pref_always_on_key">pref_always_on_notification</string>
    <string name="pref_always_on_title">Always-On Notification</string>

    <string name="pref_reminder_switch_title">Enable Reminders</string>
    <string name="pref_reminder_timepicker_title">Select Reminder\'s Time</string>
    <string name="pref_reminder_vibrate_title">Vibrate on Notifications</string>
    <string name="pref_reminder_ringtone_title">Play Ringtone on Notifications</string>

    <string name="pref_reminder_lunch_screen_key">pref_reminder_lunch_screen_key</string>
    <string name="pref_reminder_lunch_screen_title">Lunch Reminders</string>
    <string name="pref_reminder_lunch_switch_key">pref_reminder_lunch</string>
    <string name="pref_reminder_lunch_timepicker_key">pref_reminder_lunch_timepicker</string>
    <string name="pref_reminder_lunch_timepicker_default">50400000</string>
    <string name="pref_reminder_lunch_vibrate_key">pref_reminder_lunch_vibrate</string>
    <string name="pref_reminder_lunch_ringtone_key">pref_reminder_lunch_ringtone</string>

    <string name="pref_reminder_dinner_screen_key">pref_reminder_dinner_screen_key</string>
    <string name="pref_reminder_dinner_screen_title">Dinner Reminders</string>
    <string name="pref_reminder_dinner_switch_key">pref_reminder_dinner</string>
    <string name="pref_reminder_dinner_timepicker_key">pref_reminder_dinner_timepicker</string>
    <string name="pref_reminder_dinner_timepicker_default">50400000</string>
    <string name="pref_reminder_dinner_vibrate_key">pref_reminder_dinner_vibrate</string>


    <string name="pref_remind_title">Allow Reminders</string>
    <string name="pref_remind_summary_on">Reminders activated.</string>
    <string name="pref_remind_summary_off">Reminders not active.</string>

    <string name="pref_vibrate_title">Vibrate on Notifications</string>
    <string name="pref_vibrate_summary_on">Vibration activated.</string>
    <string name="pref_vibrate_summary_off">Vibration off.</string>

    <string name="pref_reminder_type_title">Reminder\'s Type</string>
    <string name="pref_reminder_type_summary">Select your preferred type of reminders.</string>
    <string name="pref_reminder_type_default">meal</string>

    <string-array name="pref_reminder_type_entries">
        <item>By Meal</item>
        <item>By Words</item>
    </string-array>
    <string-array name="pref_reminder_type_values">
        <item>meal</item>
        <item>words</item>
    </string-array>

</resources>