<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_restaurant" >
        <!-- Option to select desired restaurant -->
        <ListPreference
            android:defaultValue="@string/pref_restaurant_default"
            android:entries="@array/pref_restaurant_entries"
            android:entryValues="@array/pref_restaurant_values"
            android:key="pref_restaurant"
            android:summary="@string/pref_restaurant_summary"
            android:title="@string/pref_restaurant_title" />

        <!-- Vegetarian menu -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="pref_menu"
            android:summaryOff="@string/pref_menu_summary_off"
            android:summaryOn="@string/pref_menu_summary_on"
            android:title="@string/pref_menu_title" />
    </PreferenceCategory>
</PreferenceScreen>